--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@use "tailwindcss";
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  font-family: "General Sans", sans-serif;
+  background: #f3f3f3;
+}
