update some markup

--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="text-[26px] max-[900px]:text-xl font-medium">
+<div class="text-3xl max-[900px]:text-xl font-medium">
   <span>A product designer helping teams <br class="min-[900px]:hidden"> turn <br class="max-[900px]:hidden"> ideas into
     digitral products. <br class="min-[900px]:hidden"></span>
   <span class="opacity-60"> I create <br class="max-[900px]:hidden"> interfaces and experiences <br class="min-[900px]:hidden"></span>
