--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
-<header class="flex flex-col gap-14">
+<header class="flex flex-col gap-14 px-8">
   <div class="flex justify-between items-center">
-    <p class="text-[26px] max-[900px]:text-xl font-medium">Ucha</p>
+    <p class="text-xl font-medium">Ucha</p>
     <app-book-btn class="max-[900px]:hidden"></app-book-btn>
-    <p class="text-[26px] max-[900px]:text-xl font-medium">Gulbani</p>
+    <p class="text-xl font-medium">Gulbani</p>
   </div>
 
   <div class="min-[900px]:hidden flex flex-col gap-5">
