--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -1,18 +1,18 @@
 .scroll-container {
-  -webkit-mask-image: linear-gradient(
-    to right,
-    transparent 0,
-    black 128px,
-    black calc(100% - 200px),
-    transparent 100%
-  );
-  mask-image: linear-gradient(
-    to right,
-    transparent 0,
-    black 128px,
-    black calc(100% - 200px),
-    transparent 100%
-  );
+  // -webkit-mask-image: linear-gradient(
+  //   to right,
+  //   transparent 0,
+  //   black 128px,
+  //   black calc(100% - 200px),
+  //   transparent 100%
+  // );
+  // mask-image: linear-gradient(
+  //   to right,
+  //   transparent 0,
+  //   black 128px,
+  //   black calc(100% - 200px),
+  //   transparent 100%
+  // );
 
   &:hover .scroller-wrapper {
     animation-play-state: paused;
