--- a/src/app/components/book-btn/book-btn.component.html
+++ b/src/app/components/book-btn/book-btn.component.html
@@ -1,5 +1,6 @@
 <a href="https://cal.com/uchagulbani/30min?user=uchagulbani&overlayCalendar=true" target="_blank" type="button"
-  class="flex w-fit gap-3 items-center px-6 py-4 bg-white rounded-full font-medium text-xl max-[900px]:text-base cursor-pointer hover:bg-black hover:text-white transition-colors duration-200">
+    class="flex w-fit gap-3 items-center px-6 py-4 bg-white text-black rounded-full font-medium text-xl max-[900px]:text-base cursor-pointer hover:bg-black hover:text-white transition-colors duration-300 ease-in-out"
+>
   <ng-container *ngTemplateOutlet="icon"></ng-container> <span>Book a call</span>
 </a>
 
