--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,19 +1,14 @@
 <div class="w-full inline-flex flex-nowrap overflow-hidden scroll-container">
   <div class="scroller-wrapper">
-    <ul class="flex items-center justify-center md:justify-start [&_li]:mx-2 [&_img]:max-w-none scroller-content">
-      @for(img of images; track img) {
-      <li>
-        <img [src]="img" class="h-[256px] hover:h-[385px] transition-all duration-300 ease-in-out" />
-      </li>
-      }
-    </ul>
+    @for (i of [0,1,2,3]; track i) {
     <ul class="flex items-center justify-center md:justify-start [&_li]:mx-2 [&_img]:max-w-none scroller-content"
-      aria-hidden="true">
-      @for(img of images; track img) {
+      [attr.aria-hidden]="i > 0 ? 'true' : null">
+      @for (img of images; track img) {
       <li>
         <img [src]="img" class="h-[256px] hover:h-[385px] transition-all duration-300 ease-in-out" />
       </li>
       }
     </ul>
+    }
   </div>
 </div>
