--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -25,7 +25,9 @@
 
 .scroller-wrapper {
   display: flex;
-  animation: infinite-scroll 20s linear infinite;
+  animation: infinite-scroll 25s linear infinite;
+  will-change: transform;
+  transform: translate3d(0,0,0);
 }
 
 @keyframes infinite-scroll {
