--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,14 +1,17 @@
-<div class="w-full inline-flex flex-nowrap overflow-hidden scroll-container">
-  <div class="scroller-wrapper">
-    @for (i of [0,1,2,3]; track i) {
-    <ul class="flex items-center justify-center md:justify-start [&_li]:mx-2 [&_img]:max-w-none scroller-content"
-      [attr.aria-hidden]="i > 0 ? 'true' : null">
-      @for (img of images; track img) {
-      <li>
-        <img [src]="img" class="h-[256px] hover:h-[385px] transition-all duration-500 ease-in-out" />
-      </li>
+@if(imagesLoaded()) {
+  <div class="w-full inline-flex flex-nowrap overflow-hidden scroll-container">
+    <div class="scroller-wrapper">
+      @for (i of [0,1,2,3]; track i) {
+      <ul class="flex items-center justify-center md:justify-start [&_li]:mx-2 [&_img]:max-w-none scroller-content"
+        [attr.aria-hidden]="i > 0 ? 'true' : null">
+        @for (image of images; track image.src) {
+        <li>
+          <img [src]="image.src" class="h-[256px] hover:h-[385px] transition-all duration-500 ease-in-out" />
+        </li>
+        }
+      </ul>
       }
-    </ul>
-    }
+    </div>
   </div>
-</div>
+}
+
