--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="flex gap-4 text-xl max-[900px]:text-base font-medium">
+<div class="flex gap-4 text-xl max-[1024px]:text-base font-medium">
   <a class="px-5 py-[4.5px] bg-[#EAEAEA] rounded-full  cursor-pointer hover:bg-white transition-colors duration-200"
     href="https://x.com/uchekzzz" target="_blank" type="button">
     X
@@ -10,5 +10,9 @@
   <a class="px-5 py-[4.5px] bg-[#EAEAEA] rounded-full  cursor-pointer hover:bg-white transition-colors duration-200"
     href="https://www.linkedin.com/in/uchagulbani" target="_blank" type="button">
     Linkedin
+  </a>
+  <a class="px-5 py-[4.5px] bg-[#EAEAEA] rounded-full  cursor-pointer hover:bg-white transition-colors duration-200"
+    href="mailto:Gulbaniucha@gmail.com" target="_blank" type="button">
+    Email
   </a>
 </div>
