--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,6 +1,6 @@
 <div
   class="flex justify-between flex-col py-8 size-full relative gap-28 max-[1024px]:gap-14 h-full min-h-fit">
-  <app-header></app-header>
+  <app-header class="fade-in"></app-header>
 
    <div class="flex-1 relative">
     <app-carousel class="absolute top-1/2 -translate-y-1/2 transform" />
@@ -8,7 +8,7 @@
 
   <div class="flex justify-between items-end max-[1024px]:justify-start px-8">
     <app-about-me class="max-[1024px]:hidden"></app-about-me>
-    <app-contact></app-contact>
+    <app-contact class="fade-in"></app-contact>
   </div>
 </div>
 
