--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -3,3 +3,10 @@
       <span [class.opacity-60]="$index === 1" [class.opacity-40]="$index === 2" [innerHTML]="line.rendered"></span>
   }
 </div>
+
+<div #ghost class="text-3xl max-[1024px]:text-xl font-medium invisible absolute top-0 pointer-events-none">
+  @for(line of lines; track line.fullText) {
+    <span [innerHTML]="line.fullText"></span>
+  }
+</div>
+
